Fix layout issues on iPad caused at a specific 1px breakpoint

--- a/stylesheets/config/_variables.scss
+++ b/stylesheets/config/_variables.scss
@@ -60,7 +60,7 @@ $screen-xsmall:                       480px !default;
 $screen-phone:                        $screen-xsmall !default;
 
 // Small screen / tablet
-$screen-small:                        768px !default;
+$screen-small:                        767px !default;
 $screen-tablet:                       $screen-small !default;
 
 // Medium screen / desktop
